[package]
name = "gba-roa"
version = "0.1.0"
authors = ["Aleksander Vognild Burkow <aleksanderburkow@gmail.com>",
           "Christoffer Tønnessen <christoffer.tonnessen@gmail.com>"]
description = "Game Boy Advance Emulator written in Rust"
keywords = ["GBA", "Game Boy Advance", "Game Boy", "Rust"]
license = "GNU Affero"

[dependencies]
enum_primitive = "0.1.1"
error-chain = "0.8.1"
nom = "2.0.1"
num = "0.1.30"
gl = "0.6.1"
libc = "0.2.20"
glium = "0.16.0"
